# diff-vbd

./: .gitignore  DECISIONS.md  FINDINGS.md  PROGRESS.md  README.md  RESULTS.md  pyproject.toml
examples/: bc_selector.stl  beam.msh  bench_traced_static.py  block_on_plane.yaml  cantilever_beam.yaml  characterize_stall_pockets.py  make_two_blocks.py  two_blocks.yaml
src/diff_vbd/: __init__.py  cli.py  model.py  pytree.py  runtime_config.py
src/diff_vbd/config/: __init__.py  loader.py
src/diff_vbd/export/: __init__.py  npz.py
src/diff_vbd/problems/: __init__.py  cantilever.py
src/diff_vbd/setup/: __init__.py  boundary_conditions.py  mesh_io.py  problem_builder.py  selector_io.py  topology.py
src/diff_vbd/solver/: __init__.py  kinematics.py  materials.py  potential.py  static.py  vbd.py
src/diff_vbd/solver/contact/: __init__.py  barrier.py  bounds.py  ccd.py  colliders.py  detection.py  distances.py  friction.py  potential.py
tests/: conftest.py  test_contact.py  test_diff_vbd.py  test_hertz.py  test_potential.py  test_static.py  test_static_traced.py  test_topology.py
